Fixed up the spacing on the questions/contact pieces on desktop

--- a/sarahhkeast_portfolio/src/styles/components/contact-item.scss
+++ b/sarahhkeast_portfolio/src/styles/components/contact-item.scss
@@ -18,7 +18,6 @@
     
     &__image {
         margin-right: 18px;
-        margin-top: -5px;
     }
     
     &__text {
@@ -26,13 +25,13 @@
         font-size: 18px;
         line-height: 26px;
         margin-top: 2px;
-        
+
     }
     
     &__arrow {
         display: flex;
         align-items: flex-end;
-        margin-left: 18px;
+        margin-left: 56px;
     }
 
 }
