--- a/sarahhkeast_portfolio/src/styles/pages/about-page.scss
+++ b/sarahhkeast_portfolio/src/styles/pages/about-page.scss
@@ -95,6 +95,7 @@
     }
 
     &__contact-item {
+        display: flex;
         margin-bottom: 24px;
         text-decoration: none;
         &:hover, &:active {
@@ -131,6 +132,7 @@
     }
 
     &__resume-item {
+        display: flex;
         text-decoration: none;
         &:hover, &:active {
             text-decoration: underline;
