--- a/sarahhkeast_portfolio/src/styles/pages/landing-page.scss
+++ b/sarahhkeast_portfolio/src/styles/pages/landing-page.scss
@@ -96,7 +96,7 @@
 
 
     &__project-list-container {
-        margin: 106px 0;
+        margin-top: 106px;
         @media (max-width: $breakpoint-tablet) {
             margin: 56px 0;
         }
@@ -112,16 +112,18 @@
 
     &__project-list-title {
         display: flex;
-        width: 50%;
+        width: 30%;
         align-items: center;
         justify-content: center;
         font-size: 32px;
         line-height: 41px;
         font-weight: 600;
-        @media (max-width: $breakpoint-tablet) {
+        @media (max-width: $breakpoint-desktop) {
             font-size: 24px;
             font-weight: 600;
-            line-height: 30px;  
+            line-height: 30px; 
+        }
+        @media (max-width: $breakpoint-tablet) {
             align-items: flex-start;
             justify-content: flex-start;
         }
@@ -227,7 +229,7 @@
         border-radius: 8px;
         height: 484px;
         position: relative;
-        width: 71%;
+        width: 81%;
         @media (max-width: $breakpoint-desktop) {
             height: 332px;
         }
@@ -278,14 +280,26 @@
 
     &__question-container {
         display: flex;
-        flex: 1 1 auto;
+        width: 40%;
         justify-items: flex-start;
         align-items: center;
         margin: auto 0;
         flex-direction: column;
+        margin-top: 96px;
         @media (max-width: $breakpoint-tablet) {
             padding-top: 56px;
+            margin-top: 0;
+            width: 100%;
+            align-items: flex-start;
+            justify-content: flex-start;
         }
+    }
+
+    &__question-alignment-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
     }
 
     &__question-text {
@@ -299,11 +313,11 @@
 
     &__contact-container {
         display: flex;
-        flex: 1 1 auto;
+        width: 60%;
         align-items: center;
         margin: auto 0;
         flex-direction: column;
-        padding-top: 96px;
+        // padding-top: 96px;
         @media (max-width: $breakpoint-tablet) {
             padding-top: 24px;
             width: 100%;
